<resources>
    <string name="app_name">LSBusinessSchool</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sobre">Sobre</string>
    <string name="dev_team">Dev Team</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="alunos">Alunos</string>
    <string name="select_course">Select a Course</string>

</resources>